--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<h1> Eric - Hello World! </h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Github Pages</title>
+</head>
+
+<body>
+    <header>
+        <h1> Eric - Hello World! </h1>
+    </header>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nostrum laudantium aut placeat fugit numquam aliquid alias ex quidem consequuntur consectetur at eum dicta hic fuga neque temporibus consequatur eveniet quas eos, ut voluptatibus.
+        Ad iste ea assumenda optio. Dignissimos?</p>
+
+    <div class="secondParagraph">
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti maiores quas eaque! Veritatis ab minus molestiae qui nobis ipsum reprehenderit et quod delectus, natus quis saepe unde vitae, in fugiat? Error laboriosam sed voluptates repellat,
+            ea harum dolor. Neque, et?</p>
+    </div>
+    <div class="list">
+        <ul>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+        </ul>
+    </div>
+
+    <div class="image">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit sint nihil qui temporibus asperiores iusto neque sequi possimus facilis. Provident, officiis tempora expedita fugit amet tempore id deleniti dignissimos facilis consectetur, consequuntur
+            alias soluta sunt iure, aspernatur corporis maxime voluptatem tenetur explicabo est repellat pariatur quas. Earum blanditiis unde quos.</p>
+
+    </div>
+    <img src="http://lorempixel.com/400/200/" alt="">
+
+
+</body>
+
+</html>
