--- a/index.html
+++ b/index.html
@@ -5,42 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <title>Github Pages</title>
 </head>
 
 <body>
-    <header>
-        <h1> Eric - Hello World! </h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1 class="page-header"> Eric - Hello World! </h1>
+        </header>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nostrum laudantium aut placeat fugit numquam aliquid alias ex quidem consequuntur consectetur at eum dicta hic fuga neque temporibus consequatur eveniet quas eos, ut voluptatibus.
-        Ad iste ea assumenda optio. Dignissimos?</p>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nostrum laudantium aut placeat fugit numquam aliquid alias ex quidem consequuntur consectetur at eum dicta hic fuga neque temporibus consequatur eveniet quas eos, ut voluptatibus.
+            Ad iste ea assumenda optio. Dignissimos?</p>
 
-    <div class="secondParagraph">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti maiores quas eaque! Veritatis ab minus molestiae qui nobis ipsum reprehenderit et quod delectus, natus quis saepe unde vitae, in fugiat? Error laboriosam sed voluptates repellat,
-            ea harum dolor. Neque, et?</p>
+        <div class="text-capitalize">
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti maiores quas eaque! Veritatis ab minus molestiae qui nobis ipsum reprehenderit et quod delectus, natus quis saepe unde vitae, in fugiat? Error laboriosam sed voluptates repellat,
+                ea harum dolor. Neque, et?</p>
+        </div>
+        <div>
+            <ul class="list-inline">
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit.</li>
+            </ul>
+            <button class="btn btn-sucess">Click Here!</button>
+        </div>
+
+        <div class="image">
+            <p class="lead text-primary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit sint nihil qui temporibus asperiores iusto neque sequi possimus facilis. Provident, officiis tempora expedita fugit amet tempore id deleniti dignissimos facilis consectetur, consequuntur
+                alias soluta sunt iure, aspernatur corporis maxime voluptatem tenetur explicabo est repellat pariatur quas. Earum blanditiis unde quos.</p>
+
+        </div>
+        <img src="http://lorempixel.com/400/200/" alt="">
+
     </div>
-    <div class="list">
-        <ul>
-            <li>Lorem ipsum dolor sit.</li>
-            <li>Lorem ipsum dolor sit.</li>
-            <li>Lorem ipsum dolor sit.</li>
-            <li>Lorem ipsum dolor sit.</li>
-        </ul>
-    </div>
-
-    <div class="image">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit sint nihil qui temporibus asperiores iusto neque sequi possimus facilis. Provident, officiis tempora expedita fugit amet tempore id deleniti dignissimos facilis consectetur, consequuntur
-            alias soluta sunt iure, aspernatur corporis maxime voluptatem tenetur explicabo est repellat pariatur quas. Earum blanditiis unde quos.</p>
-
-    </div>
-    <img src="http://lorempixel.com/400/200/" alt="">
-
-
 </body>
 
 </html>
