--- a/index.html
+++ b/index.html
@@ -51,42 +51,24 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="subpage.html">Subpage</a></li>
-                        <li><a href="teachers.html">Teachers</a></li>
-                        <li><a href="events.html">Events</a></li>
-                        <li class="dropdown">
-                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="courses.html">Courses</a></li>
-                                <li><a href="course-single.html">Course Single</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li class="dropdown-submenu dropdown">
-                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Second Level Menu</a></li>
-                                        <li><a href="#">Second Level Menu</a></li>
-                                        <li><a href="#">Second Level Menu</a></li>
-                                        <li><a href="#">Second Level Menu</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="news.html">News</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <!-- <li><a href="subpage.html">Subpage</a></li> -->
+                        <li><a href="lectures.html">Lectures</a></li>
+                        <li><a href="handson.html">Hands On</a></li>
+                        <li><a href="currenttopics.html">Current Topics</a></li>
                     </ul>
+
                 </div>
             </div>
         </nav>
 
         <section class="flexslider">
             <ul class="slides">
-                <li style="background-image: url(img/slider_1.jpg)" class="overlay">
+                <li style="background-image: url(img/oab.jpg)" class="overlay">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
                                 <div class="probootstrap-slider-text text-center">
-                                    <h1 class="probootstrap-heading probootstrap-animate">Welcome TO CIT-82</h1>
+                                    <h1 class="probootstrap-heading probootstrap-animate">Welcome To CIT-82</h1>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +79,7 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
                                 <div class="probootstrap-slider-text text-center">
-                                    <h1 class="probootstrap-heading probootstrap-animate">Education is Life</h1>
+                                    <h1 class="probootstrap-heading probootstrap-animate">This is a Review of CIT-82</h1>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +91,7 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
                                 <div class="probootstrap-slider-text text-center">
-                                    <h1 class="probootstrap-heading probootstrap-animate">Helping Each of Our Students Fulfill the Potential</h1>
+                                    <h1 class="probootstrap-heading probootstrap-animate">Enjoy the topics learned in CIT-82</h1>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +104,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h2>Welcome to School of Excellence</h2>
+                        <h2>Welcome to Fresno City College CIT-82</h2>
                     </div>
                 </div>
             </div>
