--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    </button>
+
                     <a class="navbar" href="index.html" title="">CIT-82</a>
                 </div>
 
@@ -55,15 +55,33 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="courses.html">Courses</a></li>
-                                <li><a href="course-single.html">Course Single</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="news.html">News</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="css.html">CSS</a></li>
+                                <li><a href="bootstrap.html">Bootstrap</a></li>
+                                <li><a href="seo.html">SEO</a></li>
+                                <li><a href="cloud.html">Cloud</a></li>
                             </ul>
                         </li>
-                        <li><a href="handson.html">Hands On</a></li>
-                        <li><a href="currenttopics.html">Current Topics</a></li>
+                        <li>
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Hands On</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="markdown.html">Markdown</a></li>
+                                <li><a href="http.html">HTTP</a></li>
+                                <li><a href="github.html">Github</a></li>
+                                <li><a href="editors.html">Editors</a></li>
+                                <li><a href="onlineimage.html">Online Image Compression</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Current Topics</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="microsoft.html">Microsoft Purchases Github</a></li>
+                                <li><a href="utf8.html">UTF 8</a></li>
+                                <li><a href="web2.html">Web 2.0</a></li>
+                                <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
+                                <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
+                            </ul>
+                        </li>
                     </ul>
 
                 </div>
@@ -104,12 +122,12 @@
                     <div class="col-md-12">
                         <div class="probootstrap-flex-block">
                             <div class="probootstrap-text probootstrap-animate">
-                                <h3>About School</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
-                                <p><a href="#" class="btn btn-primary">Learn More</a></p>
+                                <h3>About CIT-82</h3>
+                                <p>This is a summary of CIT-82, you will find topics that we have gone over during our course. This course is about Web Technologies and we learn on everything related to the web. From the beginning of the internet to AI.</p>
+
                             </div>
-                            <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_3.jpg)">
-                                <a href="https://vimeo.com/45830194" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
+                            <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/libraryfcc.jpg)">
+
                             </div>
                         </div>
                     </div>
@@ -119,97 +137,7 @@
 
 
 
-        <section class="probootstrap-section probootstrap-section-colored probootstrap-bg probootstrap-custom-heading probootstrap-tab-section" style="background-image: url(img/slider_2.jpg)">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center section-heading probootstrap-animate">
-                        <h2 class="mb0">Highlights</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="probootstrap-tab-style-1">
-                <ul class="nav nav-tabs probootstrap-center probootstrap-tabs no-border">
-                    <li class="active"><a data-toggle="tab" href="#featured-news">Featured News</a></li>
-                    <li><a data-toggle="tab" href="#upcoming-events">Upcoming Events</a></li>
-                </ul>
-            </div>
-        </section>
 
-
-
-        <section class="probootstrap-section probootstrap-bg-white probootstrap-border-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-                        <h2>Our Featured Courses</h2>
-                        <p class="lead">Sed a repudiandae impedit voluptate nam Deleniti dignissimos perspiciatis nostrum porro nesciunt</p>
-                    </div>
-                </div>
-                <!-- END row -->
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="probootstrap-service-2 probootstrap-animate">
-                            <div class="image">
-                                <div class="image-bg">
-                                    <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
-                                </div>
-                            </div>
-                            <div class="text">
-                                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                                <h3>Application Design</h3>
-                                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi voluptatum architecto rerum error.</p>
-                                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">2,928 students enrolled</span></p>
-                            </div>
-                        </div>
-
-                        <div class="probootstrap-service-2 probootstrap-animate">
-                            <div class="image">
-                                <div class="image-bg">
-                                    <img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
-                                </div>
-                            </div>
-                            <div class="text">
-                                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                                <h3>Chemical Engineering</h3>
-                                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi voluptatum architecto rerum error.</p>
-                                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">7,202 students enrolled</span></p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6">
-                        <div class="probootstrap-service-2 probootstrap-animate">
-                            <div class="image">
-                                <div class="image-bg">
-                                    <img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
-                                </div>
-                            </div>
-                            <div class="text">
-                                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                                <h3>Math Major</h3>
-                                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi voluptatum architecto rerum error.</p>
-                                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">12,582 students enrolled</span></p>
-                            </div>
-                        </div>
-
-                        <div class="probootstrap-service-2 probootstrap-animate">
-                            <div class="image">
-                                <div class="image-bg">
-                                    <img src="img/img_sm_4.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
-                                </div>
-                            </div>
-                            <div class="text">
-                                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                                <h3>English Major</h3>
-                                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi voluptatum architecto rerum error.</p>
-                                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">9,582 students enrolled</span></p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
 
 
 
@@ -220,8 +148,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
-                        <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate" data-animate-effect="fadeInLeft">Enroll</a>
+                        <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Take this course now!!!</h2>
+                        <a href="https://www.fresnocitycollege.edu/admissions-aid/apply.html" target="_blank" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate" data-animate-effect="fadeInLeft">Enroll</a>
                     </div>
                 </div>
             </div>
@@ -233,15 +161,7 @@
                         <div class="probootstrap-footer-widget">
                             <h3>About The School</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
-                            <h3>Social</h3>
-                            <ul class="probootstrap-footer-social">
-                                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-github"></i></a></li>
-                                <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                                <li><a href="#"><i class="icon-youtube"></i></a></li>
-                            </ul>
+
                         </div>
                     </div>
                     <div class="col-md-3 col-md-push-1">
@@ -260,9 +180,9 @@
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
                             <ul class="probootstrap-contact-info">
-                                <li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-                                <li><i class="icon-mail"></i><span>info@domain.com</span></li>
-                                <li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
+                                <li><span>1101 East University Ave</span></li>
+                                <li><span>Fresno, CA 93741</span></li>
+                                <li><span>559 442 4600</span></li>
                             </ul>
                         </div>
                     </div>
@@ -276,10 +196,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 text-left">
-                            <p>&copy; 2017 <a href="https://probootstrap.com/">ProBootstrap:Enlight</a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
+                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> Designed &amp; Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
                         </div>
-                        <div class="col-md-4 probootstrap-back-to-top">
-                            <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+                        <div class="col-md-4 probootstrap-back-to-top ">
+                            <p><a href="# " class="js-backtotop ">Back to top <i class="icon-arrow-long-up "></i></a></p>
                         </div>
                     </div>
                 </div>
@@ -290,9 +210,9 @@
     <!-- END wrapper -->
 
 
-    <script src="js/scripts.min.js"></script>
-    <script src="js/main.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/scripts.min.js "></script>
+    <script src="js/main.min.js "></script>
+    <script src="js/custom.js "></script>
 
 </body>
 
