--- a/seo.html
+++ b/seo.html
@@ -49,10 +49,10 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
-                                <li><a href="seo.html">SEO</a></li>
+                                <li class="active"><a href="seo.html">SEO</a></li>
                                 <li><a href="cloud.html">Cloud</a></li>
                             </ul>
                         </li>
@@ -101,15 +101,21 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>SEO</h3>
+
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
+                                <h2></h2>
+                                <p>In the lecture about SEO, we learned that SEO means Search Engine Optimization and the first thing you need is a title make sure keywords are readable Second thing important is description Third thing is url Description
+                                    helps compel people to click your site Higher click through rates help you bump up Meta data is data behind the data H1 tag should be applied to title Only want one H1 tag all other tags are ok to have more than 1 Structure
+                                    content to show google what is the most relevent content search engine spider is a bot that was created by google it crawls through your pages and reads everything and follows links it checks for important key words
+                                    based on your h tags pinterest image you make the file name and alt text with keywords google likes multimedia posts keywords in the content look at what google says are the main keywords through the search engine look
+                                    at bottom of seach and you can see the words google is looking for bold keywords or italics to promote keywords video is good for seo it shows google that this content is made with reseach dont want to over optimize
+                                    google will know that you are just flooding for keywords look for 12 to 20 words that are similar to what you are trying to say twitter, pinterest, quora creates back links to your site google likes content that is
+                                    so good that it creates links to it video files work best when keyword is the filename dont duplicate content algorithims can be taken out by google</p>
+
 
                             </div>
                         </div>
